traces/bug_803.txt
examples++-load/iovtk.cpp:2155: error: DEAD_STORE
  The value written to &bid0 (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2155:4: Write of unused value
2153.   	for(int itab=0; itab<4; itab++){
2154.   	  char newvalue[sizeof(int)];
2155.   	  int bid0= sprintf(newvalue,"%s", (char*)&tab[itab]);
           ^
2156.   	  fwrite( &newvalue, sizeof(unsigned char), 1, fp);
2157.   	}
